<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints"
        app:title="@string/newMeeting"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meetingSubject"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/red_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingRed"
                android:forceDarkAllowed="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_textView" />

            <Button
                android:id="@+id/orange_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingOrange"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_textView" />

            <Button
                android:id="@+id/yellow_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingYellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_textView" />

            <Button
                android:id="@+id/green_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingGreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/red_button" />

            <Button
                android:id="@+id/blue_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingBlue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orange_button" />

            <Button
                android:id="@+id/purple_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/colorButtonSize"
                android:layout_height="@dimen/colorButtonSize"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_box_white"
                android:backgroundTint="@color/MeetingPurple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellow_button" />

            <TextView
                android:id="@+id/color_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/colorTextView"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/participants_rv"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meetingDate_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/add_email_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/participants_rv">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/participant_email"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/add_email_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_add_box"
                android:backgroundTint="@color/grayOut"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/participants_rv"
                android:contentDescription="@string/add_email"/>

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/meetingLocations"
                app:layout_constraintBottom_toBottomOf="@id/meetingDate_layout"
                app:layout_constraintEnd_toStartOf="@id/meetingDate_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/meetingDate_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meetingDate_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/location_spinner"
                app:layout_constraintTop_toBottomOf="@id/subject_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meetingDate_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purple_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>